Prevent text inputs from vertically cutting off instruction text

--- a/projects/static/css/style.css
+++ b/projects/static/css/style.css
@@ -8,6 +8,9 @@ body {
 	font-size: 22px;
 }
 
+input {
+	height:auto !important;
+}
 
 
 #picture_tiles .row-fluid{
